# nova-sonic-agentic-co-presenter

./: README.md  pyproject.toml  requirements.txt  start.sh  stop.sh
browser/: app.js  audio-worklet.js  barge-in.js  index.html
docs/: install-manual.md
reports/templates/: financial.html
scripts/: chrome_set_window_state.py  demo-go-live.sh  demo-setup-fullscreen.sh  ensure-chart.sh  ensure-chrome.sh  ensure-visor.sh  install.sh  refresh-credentials.sh  visor-notify.sh
src/: __init__.py  agent_app.py  api_server.py  main.py  nova_sonic_session.py  pptx_preprocessor.py  slide_cache.py  slide_store.py  slide_sync.py
src/clients/: antv_chart.py  bedrock_router.py  finalysis.py  visor.py
src/hooks/: __init__.py  keyboard_hook.py
src/models/: __init__.py  financial.py  session_config.py  slide_data.py
src/platform/: __init__.py  chrome.py  mute_helper.py  powerpoint.py  spaces.py  window_manager.py
src/prompts/specialists/: financial.md
src/render/: report.py
src/specialists/: base.py  registry.py
src/specialists/agents/: financial.py
src/specialists/toolkits/: financial.py  shared.py
src/state/: data_handles.py  handoff_rate.py  slide_checkpoint.py
src/tools/: analyze_slide.py  control_slideshow.py  get_premarket.py  get_quote.py  handoff_to_specialist.py  navigate_slide.py  switch_window.py
src/tools/session_b/: __init__.py
visor/: package-lock.json  package.json  server.mjs
websocket-server/: mute-state.js  nova-sonic-client.js  package-lock.json  package.json  server.js  session-manager.js
