[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presentation-assistant-agent"
version = "0.1.0"
description = "Real-time AI presentation companion powered by Amazon Nova Sonic (voice) and Nova Pro (reasoning)."
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=0.1.0",
    "bedrock-agentcore>=0.1.0",
    "boto3>=1.35.0",
    "aws-sdk-bedrock-runtime>=0.1.0",
    "smithy-aws-core>=0.0.1",
    "python-pptx>=1.0.0",
    "pdf2image>=1.17.0",
    "pyaudio>=0.2.14",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
presentation-agent = "src.main:main"
presentation-keyboard-hook = "src.hooks.keyboard_hook:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
